# Stella-OpenStack

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  Stella-OpenStack.py  connect_openstack.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
JBNUscripts/: backup-snapshot.sh  block-ip-all-project.sh  compute-reload.sh  find-cpu-spinning-all.sh  find-cpu-spinning-single-node.sh  nat-portforwarding.sh
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
ku.stella/: Stella-OpenStack.py  __init__.py  clouds.yaml  connect_openstack.py
ku.stella/tests/: test_ku.stella.py
releasenotes/source/: conf.py  index.rst
