[metadata]
name = ku.stella
summary = Stella Cloud project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    ku.stella

[compile_catalog]
directory = ku.stella/locale
domain = ku.stella

[update_catalog]
domain = ku.stella
output_dir = ku.stella/locale
input_file = ku.stella/locale/ku.stella.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ku.stella/locale/ku.stella.pot
